@@ -57,6 +57,7 @@ all = [
     "pyqt6",
     "qtpy",
     "corner",
+    "numba",
 ]
 
 test = [
